--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,6 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
-
 [[constraint]]
   name = "github.com/go-chi/chi"
   version = "3.1.5"
@@ -32,3 +31,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/unrolled/render"
+
+[[override]]
+  name = "github.com/dgrijalva/jwt-go"
+  branch = "master"
